k8s/apps/romm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: romm-ingress
  namespace: romm
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: homelab-ca-issuer
    traefik.ingress.kubernetes.io/router.middlewares: romm-romm-headers@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - emulator.home.lab
      secretName: emulator-tls
  rules:
    - host: emulator.home.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: romm-app
                port:
                  number: 8080
